--- a/styles/style.css
+++ b/styles/style.css
@@ -272,7 +272,6 @@ h6 {
 
 .greyish {
   background-color: #f4f5f6;
-  height: 367px;
 }
 
 .h2-subscribe {
